--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- This section contains metadata, css.stylesheet and the title of the webpage. -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Updated the title of the Webpage to the company's name and the business that it offers -->
     <title>Horiseon - Social Solution Services</title>
 </head>
 
+<!-- This section cointains the navigation links. -->
 <body>
-    <!-- Revised the structure of the Header element (from <div> to <footer>) and added Navigation element (<nav>)
-         to contain the navigation links -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -21,36 +20,31 @@
             </ul>
         </nav>
     </header>
-
-    <!-- added section element -->
+    
     <section class="hero"></section> 
 
-    <!-- added Article element -->
+    <!-- This section contains the info in the main section of the webpage. -->
     <article class="content">
-        <!-- added Section elements -->
         <section class="main-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section> 
         <section class="main-content"> 
-            <!-- Removed id element as it was not used -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section> 
         <section class="main-content">
-            <!-- Removed id element as it was not used -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </section>
     </article>
 
-    <!-- added Article element -->
-    <article class="benefits">
-        <!-- added Section elements -->
-        <section class="benefit-property">
+    <!-- This section contains the info in sidebar section of the webpage -->
+     <aside class="benefits">
+            <section class="benefit-property">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
@@ -65,9 +59,9 @@
             <img src="./assets/images/cost-management.png" />
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </section>
-    </article>
+    </aside>
 
-    <!-- Revised the structure of the Footer element from <div> to <footer> -->
+    <!-- This section contains the info in the footer of the webpage -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
