minor updates to the alt text description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <section class="benefit-property">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="A person, with a light-bulb instead of head, emitting light on the business." />
+            <img src="./assets/images/brand-awareness.png" alt="A person, with a light-bulb instead of head" />
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </section>
         <section class="benefit-property">
